fixed minor spacing issues for login

--- a/client/src/component/styles/form.css
+++ b/client/src/component/styles/form.css
@@ -1,15 +1,21 @@
 .login {
-    margin-bottom: clamp(0.1rem, 7.5vw, 10rem);
+    margin-bottom: clamp(0.1rem, 10vw, 10rem);
     flex-direction: column;
     row-gap: 2rem;
     color: white;
     animation: fadeSlideUp 0.4s ease-in;
 }
-.login * { margin: 0 auto; }
-.login-label { margin-top: 1rem; text-align: center; width: 100%; font-size: 1.25rem; color: rgb(36, 36, 141); }
+.login-label { 
+    margin-top: 2rem; 
+    text-align: center; 
+    width: 100%; 
+    font-size: clamp(1.25rem, 2.5vw, 1.375rem); 
+    color: rgb(36, 36, 141); 
+}
 .login input { width: 60%; box-shadow: 0 0 3px; border-radius: 3px;}
 .login input:focus { outline-color: rgb(36, 36, 141); }
 .sign-in-btn { 
+    margin: 0;
     font-size: clamp(0.875rem, 2.5vw, 1rem); 
     letter-spacing: 0.125rem;
     width: 60%; 
