--- a/client/src/component/styles/nav.css
+++ b/client/src/component/styles/nav.css
@@ -30,7 +30,7 @@
 }
 
 .App-header button:hover { box-shadow: 0 0 5px black; }
-.about-btn { margin-right: clamp(3rem, 5vw, 4rem); }
+.about-btn { margin-right: clamp(1rem, 5vw, 4rem); }
 .about-btn:hover { color: white; background: rgb(32, 184, 184); }
 .login-btn:hover { color: white; background: rgb(23, 23, 179); }
 
